# burn-out

./: CMakeLists.txt  CTestConfig.cmake  CTestCustom.cmake.in  Doxyfile.in  License.txt  README.md  vidtkConfig-install.cmake.in  vidtkConfig.cmake.in
tests/: CMakeLists.txt
tests/classifier/: CMakeLists.txt  test_hashed_image_classifier.cxx
tests/data/: .gitattributes  MITRE_spreadsheet_event_format.csv  MITRE_spreadsheet_event_format_bad_0.csv  MITRE_spreadsheet_event_format_bad_1.csv  MITRE_spreadsheet_event_format_bad_2.csv  MITRE_spreadsheet_event_format_bad_3.csv  aimless_driving.kw18  aimless_driving_events.config  apply_saliency_event_norm_time_diff.config  apply_saliency_time_link_prob.config  bundler_data.txt  burn_in_mask.pgm  clif.trk  clif.trk.events  clif07-motion.det  clif_trk.db  default_vidtk_db.spatialite  diff_test_black.pgm  event_converter.config  following_test.config  following_test_tracks.kw18  following_unstab_world_loc_test.kw18  gt_lair_links.txt  homog_test_mask_0.pgm  homog_test_mask_1.pgm  homog_textfile.homog  image_obj_filter_region  include1.conf  include2.conf  kw18-test.trk  kwa_compressed.data  kwa_compressed.index  kwa_uncompressed.data  kwa_uncompressed.index  kwcct_event_detector_test.config  kwsoti2_event_detector.config  kwtpd_event_detector_test.config  lair-frame-time-test.txt  lair_00626.vidtk_meta  lair_00627.vidtk_meta  (+79 more)
tests/descriptors/: CMakeLists.txt  test_bag_of_words_model.cxx  test_descriptor_filter.cxx  test_dpm_tot_generator.cxx  test_integral_hog_descriptor.cxx  test_online_descriptor_generator.cxx  test_online_track_type_classifier.cxx  test_tot_collector_prob_product.cxx  test_tot_collector_process.cxx  test_tot_super_process.cxx
tests/kwklt/: CMakeLists.txt  test_klt_pyramid.cxx  test_klt_tracking.cxx
tests/learning/: CMakeLists.txt  test_adaboost_learner.cxx  test_svm_learner.cxx
tests/logger/: CMakeLists.txt  test_json_formatter.cxx  test_location_info.cxx  test_logger.cxx  test_logger_manager.cxx
tests/object_detectors/: CMakeLists.txt  test_blob_pixel_feature_extraction.cxx  test_connected_component_process.cxx  test_diff_super_process.cxx  test_filter_image_objects_process.cxx  test_moving_training_data_container.cxx  test_pixel_feature_extraction_super_process.cxx  test_salient_region_classifier_process.cxx  test_sg_gm_pixel_model.cxx  test_sthog_detector_process.cxx  test_text_parser.cxx  test_three_frame_differencing.cxx
tests/performance/: CMakeLists.txt  test_gauss_filter_2d_timing.cxx
tests/pipeline/: CMakeLists.txt  sample_nodes.h  test_dependency_processing.cxx  test_multi_push_pipeline.cxx  test_nested_pipelines.cxx  test_nested_skip_pipeline.cxx  test_nested_skipping_pipeline.cxx  test_reset_pipeline.cxx  test_simple_pipelines.cxx  test_skip_optional_pipeline.cxx  test_skip_pipeline.cxx  test_stop_pipeline.cxx  test_termination.cxx  test_timing_pipeline.cxx
tests/pipeline_framework/: CMakeLists.txt  sample_nodes.h  test_connect_duplicate_input.cxx  test_connect_no_execute_down.cxx  test_connect_no_execute_up.cxx  test_dependency_processing.cxx  test_flush_signal.cxx  test_multi_push_pipeline.cxx  test_nested_pipelines.cxx  test_nested_skip_pipeline.cxx  test_nested_skipping_pipeline.cxx  test_no_output_signal.cxx  test_reset_pipeline.cxx  test_simple_pipelines.cxx  test_skip_detection_pipeline.cxx  test_skip_optional_pipeline.cxx  test_skip_pipeline.cxx  test_stop_pipeline.cxx  test_termination.cxx  test_timing_pipeline.cxx
tests/process_framework/: CMakeLists.txt  test_function_caller_processes.cxx
tests/protobuf/: CMakeLists.txt  test_convert_protobuf.cxx  test_protobuf_container.cxx
tests/resource_pool/: CMakeLists.txt  test_resource_pool.cxx  test_resource_user.cxx
tests/system/: ConfigBlock.py  classification_experiment_generator.py  detect_and_track_input.conf  example_experiments_file.txt  generate_curves_for_adaboost.py  perseas_system_test.py
tests/track_oracle/: CMakeLists.txt  test_align_frames.cxx  test_aoi_utils.cxx  test_aries_interface.cxx  test_bounding_box.cxx  test_clone_fields.cxx  test_continuity_purity.cxx  test_csv_tokenizer.cxx  test_data_terms.cxx  test_domains.cxx  test_min_gt_ct_pcent.cxx  test_score_aipr.cxx  test_score_frames.cxx  test_score_frames_aipr.cxx  test_score_hadwav.cxx  test_time_window_filter.cxx  test_track_kwxml.cxx  test_track_loader.cxx  test_track_oracle_geo_aoi.cxx  test_track_oracle_thread_safety.cxx  test_track_scorable_mgrs.cxx  test_track_synthesizer.cxx  test_track_xgtf.cxx  test_xml_tokenizer.cxx
tests/tracking/: CMakeLists.txt  config.py  test_add_image_clip_to_image_object_process.cxx  test_connected_component_process.cxx  test_da_so_tracker.cxx  test_da_tracker_process.cxx  test_detect_and_track.py  test_diff_super_process.cxx  test_filter_image_objects_process.cxx  test_frame_objects_buffer_process.cxx  test_full_tracking_super_process.cxx  test_homography_holder_process.cxx  test_homography_process.cxx  test_image_difference_process.cxx  (+32 more)
tools/: CMakeLists.txt  bundle_adjust_tracks.cxx  burnout_cli.cxx  circular_features_test.cxx  classify_and_filter_tracks.cxx  convert_geo_coords.cxx  convert_track_format.cxx  create_positive_and_negative_set.cxx  detect_and_track.cxx  detect_and_track_async.cxx  estimate_f_matrices.cxx  event_merger.cxx  extract_cnn_samples.py  extract_video_frames.cxx  interpolate_gps.cxx  klt_tracks.cxx  link_tracks.cxx  manual_pmatrix.cxx  mod.cxx  mod_annotate_video.cxx  multi_dataset_training_test.cxx  oc_test.cxx  pvo_trac_classification_threshold_sweep.cxx  read_write_event_files.cxx  remove_metadata_burnin.cxx  run_aimless_driving_events.cmake  run_apply_saliency_event_norm_time_diff.cmake  run_apply_saliency_time_link_prob.cmake  run_apply_saliency_time_link_prob.conf  run_following_detector_test.cmake  run_kwcct_event_detector_test.cmake  run_kwsoti2_event_detector.cmake  run_kwtpd_event_detector_test.cmake  run_meeting_detector_test.cmake  run_merge_event_files.cmake  scoreICCV09.cxx  score_frames.cxx  score_homographies.cxx  stabilize_video.cxx  stabilize_video_old.cxx  (+15 more)
vidtk3p/: CMakeLists.txt
(+328 files in other folders)
